# niri-pypc

./: .gitignore  .tmuxp.yaml  AGENTS.md  LICENSE  README.md  devenv.nix  devenv.yaml  pyproject.toml
.scratch/: REPO_RULES.md
.scratch/projects/00-niri-pypc-brainstorming/: NIRI_PYPC_CONCEPT-old.md  niri-pypc-concept-tweaks.md
.scratch/projects/01-niri-pypc-final-concept/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  NIRI_PYPC_CONCEPT_FINAL.md  NIRI_PYPC_IMPLEMENTATION_GUIDE.md  NIRI_PYPC_SPEC.md  PLAN.md  PROGRESS.md
.scratch/projects/02-initial-implementation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md
.scratch/projects/02-niri-pypc-code-review/: INITIAL_CODE_REVIEW.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_OPPORTUNITIES_V2_5.md  niri_pypc_code_review.md  niri_pypc_refactoring_guide.md
.scratch/projects/03-niri-pypc-initial-code-review/: INITIAL_CODE_REVIEW_v2_5.md
.scratch/projects/04-niri-pypc-combined-code-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  NIRI_PYPC_CODE_REVIEW_FINAL.md  NIRI_PYPC_REFACTORING_GUIDE.md  NIRI_PYPC_REFACTOR_OPPORTUNITIES-FINAL.md  PLAN.md  PROGRESS.md
.scratch/projects/05-deep-research-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  E2E_TESTING_IDEAS.md  Niri-PyPC_Focused_Deep-Research-Report.md  PLAN.md  PROGRESS.md  niri-docs-developing-overview.md
.scratch/projects/06-windowed-e2e-test-suite-enhancement/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  E2E_TESTING_IMPLEMENTATION_GUIDE.md  NIRI_TEST_SUITE_IMPLEMENTATION_GUIDE.md  PLAN.md  PROGRESS.md  TEST_SUITE_ENHANCEMENT_PLAN.md  VISUAL_TEST_SUITE_HARDENING_GUIDE.md  niri_test_suite_enhancement_implementation_guide-overview.md
.scratch/projects/07-demo-fixes/: DEMO_ERROR_REPORT.md
.scratch/projects/08-pydantic-refactor-v2/: PYDANTIC_REFACTOR_PLAN.md  REFACTOR_COMMIT_GUIDE.md
.scratch/projects/09-pydantic-refactor-code-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  NIRI_PYPC_PYDANTIC_V2_CODE_REVIEW.md  PLAN.md  PROGRESS.md  PYDANTIC_REFACTOR_INITIAL_CODE_REVIEW.md
.scratch/projects/10-action-refactor/: ACTION_REFACTOR_CONCEPT.md  ACTION_REFACTOR_CONCEPT_REVIEW.md  ACTION_REFACTOR_IMPLEMENTATION_GUIDE.md  ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md
.scratch/projects/11-action-refactor-review/: ACTION_REFACTOR_CODE_REVIEW.md  ACTION_REFACTOR_CODE_REVIEW_REFACTOR.md  ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md  Review Response.md
.scratch/projects/12-action-refactor-refactor/: ACTION_REFACTOR_CODE_REVIEW_REFACTOR_GUIDE.md  ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md
.scratch/projects/13-final-code-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  FINAL_CODE_REVIEW.md  PLAN.md  PROGRESS.md
demo/: visual_demo.py
demo/fixtures/niri/configs/: visual-demo.kdl
demo/fixtures/niri/scenarios/: scenario-visual-demo.yaml
schema/: upstream-pin.toml
schema/exported/: action.schema.json  event.schema.json  reply.schema.json  request.schema.json
schema/ir/: niri-ipc-ir.json
src/niri_pypc/: __init__.py  actions.py  config.py  errors.py
src/niri_pypc/api/: bundle.py  client.py  event_stream.py
src/niri_pypc/runtime/: lifecycle.py
src/niri_pypc/transport/: connection.py  framing.py
src/niri_pypc/types/: __init__.py  base.py  codec.py
tests/: conftest.py  test_actions.py  test_package_metadata.py
tests/api/: test_bundle.py  test_client.py  test_config.py  test_event_stream.py  test_lifecycle.py
tests/fixtures/niri/configs/: base-minimal.kdl  dense-workspace.kdl  multi-output.kdl
tests/fixtures/niri/scenarios/: scenario-dense-workspace.yaml  scenario-minimal.yaml  scenario-multi-output.yaml
tests/helpers/: fake_niri_socket.py  nested_niri.py  test_nested_niri_hardening.py
tests/integration/: conftest.py  test_command_flow.py  test_event_flow.py  test_independence.py  test_nested_niri_basic.py  test_nested_niri_events.py
tests/live/: conftest.py  test_live.py
tests/transport/: test_connection.py  test_framing.py
tests/types/: test_base_runtime.py  test_codec_contract.py  test_edge_cases.py  test_generated_contract.py  test_generated_shapes.py  test_metadata.py  test_reply_roundtrip.py  test_roundtrip.py  test_unknown_variants.py
tools/: generate_types.py  normalize_ir.py  verify_generated.py
tools/schema_exporter/: Cargo.toml
tools/schema_exporter/src/: main.rs
