[project]
name = "niri-pypc"
version = "0.2.0"
description = "Python controls for the Niri compositor."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "niri-pypc maintainers" },
]

dependencies = [
  "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "ty>=0.0.1a11",
  "PyYAML>=6.0",
]

#[project.urls]
#homepage = "https://github.com/<owner>/niri-pypc"
#repository = "https://github.com/<owner>/niri-pypc.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/niri_pypc)
packages = ["src/niri_pypc"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "LICENSE",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q --cov=niri_pypc --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "contract: socket-only IPC contract tests",
  "nested: nested/windowed niri integration tests",
  "smoke: manual real-session checks",
  "niri_scenario(name): select nested niri scenario fixture",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/niri_pypc/types/generated/*.py" = ["E501", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
exclude = ["src/niri_pypc/types/generated"]
